# ElswordTimer2

./: 123.py  README.md  cooldown_window.py  event_data.json  event_data2.json  main.py  main.spec  pyproject.toml  requirements.txt
gui/: common.py  cooldown_window.py  countdown_window.py  countdown_window_manager.py  edit_window.py  main_window.py  skill_editor.py
listen_hotkey/: hotkey_listener.py
manager/: cooldown_manager.py  edit_window_manager.py  group_state_manager.py  main_window_manager.py  timer_manager.py
settings/: common.py  scan_code_map.json  scan_code_resolver.py
tests/: test_change.py  test_core.py  test_timer.py  trigger_timer_test.py
timer/: core.py  edit_window_manager.py  manager.py  timer_core.py  timer_factory.py  timer_manager.py
