[tool.poetry]
name = "elsword-timer"
version = "0.1.0"
description = "Custom cooldown timer for Elsword"
authors = ["原彬 <your@email.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.13.5"
keyboard = "0.13.5"
pip = "25.2"
pynput = "1.8.1"
PySide6 = "6.9.0"
PySide6-Addons = "6.9.0"
PySide6-Essentials = "6.9.0"
shiboken6 = "6.9.0"
six = "1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"